tests/baselines/reference/assignmentCompatWithObjectMembers5.errors.txt
==== tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers5.ts (2 errors) ====
    class C {
        foo: string;
    }
    
    var c: C;
    
    interface I {
        fooo: string;
    }
    
    var i: I;
    
    c = i; // error
    ~
!!! error TS2322: Type 'I' is not assignable to type 'C':
!!! error TS2322:   Property 'foo' is missing in type 'I'.
    i = c; // error
    ~
!!! error TS2322: Type 'C' is not assignable to type 'I':
!!! error TS2322:   Property 'fooo' is missing in type 'C'.